...
// Used in the welcome view
let userNameJB = "Jelly Belly"

// Used in the OnboardView
let featuresToBuild = ["The app shows a menu as a list",
                   "Menu list is fetched from an API and saved in the app",
                   "Users can choose menu items and add them to their order",
                   "Upon checkout, total amount will be calculated",
                   "Users can tag the specials in the menu"]

extension Double {
    func roundNearest() -> Double {
        let intPart: Int = Int(self)
...
