...
    
    var body: some View {
        
        if verticalSizeClass == .regular && horizontalSizeClass == .compact {
            HStack(spacing: 20.0) {
                BigText(text: "Your Order")
                    .accessibilityIdentifier("YourOrder")
                Spacer()
                RoundLogoView(imageSize: Constants.Logo.logoViewSizeSmall)
            }
            .padding(.all)
        } else {
            Spacer()
...
                        .padding(.leading)
                        .frame(maxWidth: .infinity, alignment: .leading)
                        Text("Enjoy your meal!")
                            .bold()
                            .frame(maxWidth: .infinity, alignment: .leading)
                            .padding(.leading)
                            .accessibilityIdentifier("filledOrder")
                    }
                    Button(action: {
                        orderCaretaker.clear()
                    }) {
                        Text("Clear Order")
                            .foregroundColor(Color("Belly"))
...
